--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,11 +3,65 @@ body 	{
 	     background-color: black;
 		 background-image: url(./bgimg.jpg);
 	     font-size: 10pt;
-	     font-family: Verdana; Geneva, Arial, Helvetica, sans-serif;  
+	     font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;  
 	}
 		
 div 	{background-color: black;}
 		
 p 	{  color: purple; font-size: 10pt; }
-		
-h1 	{  font-weight:bold; }
+
+h1.title {
+	font-size: 36pt;
+	font-weight: bold;
+	text-align:center;
+	margin-top: 15px;
+	margin-bottom: 0px; 
+	}
+
+/* a { text-decoration:none; font-weight: bold; }
+a:link, a:visited { color: ; }	
+a:link.resume , a:visited.resume  { color:black; text-decoration:underline; }	
+a:hover, a:hover.resume { color: #fff; background-color: #036; text-decoration: underline; }	
+
+img {border: solid 1px black; } */
+
+/* p.tag { text-align:center; font-size: 14pt; font-weight: normal; text-decoration: none; font-variant: small-caps; }
+a:link.tag, a:visited.tag { color:black; text-decoration: none; }
+a:hover.tag { color: #fff; background-color:#036; text-decoration: underline; } */
+
+.printonly { display:none; }
+.pagebreak { display:none; }
+#printheader { display:none; }
+
+#wrap {width:1240px; margin:0 auto; background:#c9c; border-left: solid 2px black; border-right: solid 2px black;  }
+
+#header { background:#ddd; padding:5px 10px;  }
+
+#nav { background:#c99; padding:5px 10px; text-align:center; }
+
+#nav li  { display: inline; list-style-type: none; padding-right: 20px; font-size: 14pt; font-weight:normal; font-variant:small-caps;}
+
+#main {background:#9c9; float:left; width:580px; padding-top:0px; padding-left:10px; padding-right:10px; padding-bottom:10px; margin-bottom:0; height:3050px; }
+
+#resume {background:#9c9; width:900px; margin:auto; padding:20px; text-align:left; }
+
+#lsidebar { float:left; padding:10px; }
+
+#rsidebar { background:#c9c; float:left; width:300px; padding:10px; }
+
+#footer { background:#cc9; clear:both; padding:5px 10px; }
+
+#footer p { margin:0; font-style:italic; text-align:center; font-size:small; }
+
+/* Star hack for IE 6 bug */
+* html #footer { height:1px; }
+
+.polaroid {
+			border: solid 1px purple; 
+			background: black;
+			width: 250px;
+			padding: 15px;
+
+			text-align: center;
+			color: cyan;
+			}
