--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,12 +4,16 @@ body 	{
 	     font-size: 10pt;
 	     font-family: Tahoma, Arial, Helvetica, sans-serif;  
 	}
-		
+	
+body.centdiv {text-align: center; min-width: 600px;}
+	
 div 	{background-color: black;}
 		
 p 	{  color: grey; font-size: 10pt; }
 
 p.buttons {text-align:center;}
+
+ul{list-style-type: square;}
 
 h1.title {
 	font-size: 36pt;
@@ -22,6 +26,9 @@ h1.title {
 	
 h2.subtitle	{color: white;}
 
+.css {text-align:right; }
+
+
 /* a { text-decoration:none; font-weight: bold; }
 a:link, a:visited { color: ; }	
 a:link.resume , a:visited.resume  { color:black; text-decoration:underline; }	
@@ -32,13 +39,14 @@ img {border: solid 1px black; } */
 /* p.tag { text-align:center; font-size: 14pt; font-weight: normal; text-decoration: none; font-variant: small-caps; }
 a:link.tag, a:visited.tag { color:black; text-decoration: none; }
 a:hover.tag { color: #fff; background-color:#036; text-decoration: underline; } */
-
+/* 
 .printonly { display:none; }
 .pagebreak { display:none; }
 #printheader { display:none; }
 
 #wrap {width:1240px; margin:0 auto; background:#c9c; border-left: solid 2px black; border-right: solid 2px black;  }
-
+ */#wrapper {margin:0 auto; width:600px; text-align: left;}
+/* 
 #header { background:#ddd; padding:5px 10px;  }
 
 #nav { background:#c99; padding:5px 10px; text-align:center; }
@@ -47,21 +55,21 @@ a:hover.tag { color: #fff; background-color:#036; text-decoration: underline; } 
 
 #main {background:#9c9; float:left; width:580px; padding-top:0px; padding-left:10px; padding-right:10px; padding-bottom:10px; margin-bottom:0; height:3050px; }
 
-#resume {background:#9c9; width:900px; margin:auto; padding:20px; text-align:left; }
+#resume {background:#9c9; width:900px; margin:auto; padding:20px; text-align:left; } */
 
-#lsidebar {float:left; padding:10px; }
+#lsidebar {float:right; padding:10px; }
 
-#footer { background:#cc9; clear:both; padding:5px 10px; }
+/* #footer { background:#cc9; clear:both; padding:5px 10px; }
 
-#footer p { margin:0; font-style:italic; text-align:center; font-size:small; }
+#footer p { margin:0; font-style:italic; text-align:center; font-size:small; } */
 
 /* Star hack for IE 6 bug */
 * html #footer { height:1px; }
 
 .polaroid {	border: solid 1px black; 
 			background: white;
-			width: 250px;
-			padding: 20px;
+			width: 200px;
+			padding: 15px;
 			margin-right: auto;
 			margin-left: auto;
 			margin-top: 10px;
