--- a/print.css
+++ b/print.css
@@ -2,6 +2,8 @@
 
 body { background: white; color: black; float: none; background: transparent none;}
 
+div { color: black; }
+
 img { display: none; }
 
 table{ display:none; }
@@ -9,12 +11,6 @@ table{ display:none; }
 button{display:none; }
 
 p {color: black;}
-
-
-/* 
-
-#printheader { display:block; text-align:center; float:none !important; padding-top:10px; padding-bottom:0;}
-.printonly {display:block;}
 
 #resume {
    width: auto;
@@ -26,6 +22,13 @@ p {color: black;}
    color: black;
    background: transparent none;
    }
+
+/* 
+
+#printheader { display:block; text-align:center; float:none !important; padding-top:10px; padding-bottom:0;}
+.printonly {display:block;}
+
+
 
 /* /* www.alistapart.com/articles/goingtoprint/ *//* 
 
