--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,7 @@ h1.title {
 	margin-top: 15px;
 	margin-bottom: 0px;
 	font-family: Tahoma, Arial, Helvetica, sans-serif;
+	color: purple;
 	}
 	
 h2.subtitle	{color: white;}
