--- a/print.css
+++ b/print.css
@@ -1,5 +1,3 @@
-/* www.alistapart.com/articles/goingtoprint/ */
-
 body { background: white; color: black; float: none; background: transparent none;}
 
 div { color: black; }
@@ -8,11 +6,27 @@ img { display: none; }
 
 table{ display:none; }
 
-button{display:none; }
+button{ display:none; }
 
 p {color: black;}
 
-#resume {
+h1.title {
+	font-size: 18pt;
+	font-weight: bold;
+	text-align:center;
+	margin-top: 15px;
+	margin-bottom: 0px;
+	font-family: Tahoma, Arial, Helvetica, sans-serif;
+	color: black;
+	}
+	
+h2.subtitle	{
+	color: black ;
+	font-size: 14pt;}
+
+.css {text-align:right; }
+
+.resume {
    width: auto;
    margin: 0;
    padding-left: 5pt;
@@ -21,51 +35,3 @@ p {color: black;}
    float: none !important;
    color: black;
    background: transparent none;
-   }
-
-/* 
-
-#printheader { display:block; text-align:center; float:none !important; padding-top:10px; padding-bottom:0;}
-.printonly {display:block;}
-
-
-
-/* /* www.alistapart.com/articles/goingtoprint/ *//* 
-
-body { background: white; font-size: 10pt; font-family:Helvetica,Arial,'DejaVu Sans','Liberation Sans',Freesans,sans-serif; }
-
-img { display: none; }
-
-#resume h2 { text-align:left; font-size:14pt; font-variant:normal; text-decoration:none; line-height:1em; }
-
-#printheader h1 { text-align:center; font-size:16pt; }
-
-table{ display:none; }
-
-ul { margin:0px; padding:0; list-style:disc; }
-li { margin-left:20px; margin-bottom:5px; padding:0;  }
-
-
-
-#header, #nav, #sidebar, #footer { display: none; }
-
-#wrap {width: auto; margin:-25pt; border:0; }
-
-
-
-.pagebreak { display:block; page-break-before:always; }
-   
-  a:link, a:visited {
-   color: black;
-   background: transparent;
-   font-weight: bold;
-   text-decoration: underline;
-   }
-#resume a:link:after, #resume a:visited:after, #printheader a:link:after, #printheader a:visited:after {
-   content: " (" attr(href) ") ";
-   font-size: 90%;
-   }
-#resume a[href^="/"]:after, #printheader a[href^="/"]:after {
-   content: " (http://www.alistapart.com" attr(href) ") ";  */
-    }
- */ */
