--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,7 @@
-body 	{
-	     color: grey;
+body {   color: grey;
 	     background-color: black;
 	     font-size: 10pt;
-	     font-family: Tahoma, Arial, Helvetica, sans-serif;  
-	}
+	     font-family: Tahoma, Arial, Helvetica, sans-serif;  }
 	
 body.centdiv {text-align: center; min-width: 600px;}
 	
@@ -29,43 +27,9 @@ h2.subtitle	{color: white;}
 
 .css {text-align:right; }
 
-
-/* a { text-decoration:none; font-weight: bold; }
-a:link, a:visited { color: ; }	
-a:link.resume , a:visited.resume  { color:black; text-decoration:underline; }	
-a:hover, a:hover.resume { color: #fff; background-color: #036; text-decoration: underline; }	
-
-img {border: solid 1px black; } */
-
-/* p.tag { text-align:center; font-size: 14pt; font-weight: normal; text-decoration: none; font-variant: small-caps; }
-a:link.tag, a:visited.tag { color:black; text-decoration: none; }
-a:hover.tag { color: #fff; background-color:#036; text-decoration: underline; } */
-/* 
-.printonly { display:none; }
-.pagebreak { display:none; }
-#printheader { display:none; }
-
-#wrap {width:1240px; margin:0 auto; background:#c9c; border-left: solid 2px black; border-right: solid 2px black;  }
- */#wrapper {margin:0 auto; width:600px; text-align: left;}
-/* 
-#header { background:#ddd; padding:5px 10px;  }
-
-#nav { background:#c99; padding:5px 10px; text-align:center; }
-
-#nav li  { display: inline; list-style-type: none; padding-right: 20px; font-size: 14pt; font-weight:normal; font-variant:small-caps;}
-
-#main {background:#9c9; float:left; width:580px; padding-top:0px; padding-left:10px; padding-right:10px; padding-bottom:10px; margin-bottom:0; height:3050px; }
-
-#resume {background:#9c9; width:900px; margin:auto; padding:20px; text-align:left; } */
+#wrapper {margin:0 auto; width:600px; text-align: left;}
 
 #lsidebar {float:right; padding:10px; }
-
-/* #footer { background:#cc9; clear:both; padding:5px 10px; }
-
-#footer p { margin:0; font-style:italic; text-align:center; font-size:small; } */
-
-/* Star hack for IE 6 bug */
-* html #footer { height:1px; }
 
 .polaroid {	border: solid 1px black; 
 			background: white;
@@ -77,3 +41,6 @@ a:hover.tag { color: #fff; background-color:#036; text-decoration: underline; } 
 			margin-bottom: 20px;
 			text-align: center;
 			color: purple			}
+
+/* Star hack for IE 6 bug */
+* html #footer { height:1px; }
